[tool.poetry]
name = "lora-trainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
datasets = "^3.4.1"
peft = "^0.15.0"
trl = "^0.15.2"
transformers = "^4.50.0"
bitsandbytes = "^0.45.3"
protobuf = "^6.30.1"
sentencepiece = "^0.2.0"
dotenv = "^0.9.9"
ruff = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
